language/move-lang/tests/move_check/locals/drop_conditional.exp
error: 

    ┌── tests/move_check/locals/drop_conditional.move:14:11 ───
    │
 14 │         &x;
    │           ^ Invalid return
    ·
 11 │         let x = Cup<R> {};
    │             - The local 'x' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
    ·
 11 │         let x = Cup<R> {};
    │                 --------- The type '0x42::M::Cup<0x42::M::R>' does not have the ability 'drop'
    ·
 11 │         let x = Cup<R> {};
    │                     - The type '0x42::M::Cup<0x42::M::R>' can have the ability 'drop' but the type argument '0x42::M::R' does not have the required ability 'drop'
    │

error: 

    ┌── tests/move_check/locals/drop_conditional.move:14:11 ───
    │
 14 │         &x;
    │           ^ Invalid return
    ·
 13 │         let x = Pair<S, R> {};
    │             - The local 'x' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
    ·
 13 │         let x = Pair<S, R> {};
    │                 ------------- The type '0x42::M::Pair<0x42::M::S, 0x42::M::R>' does not have the ability 'drop'
    ·
 13 │         let x = Pair<S, R> {};
    │                         - The type '0x42::M::Pair<0x42::M::S, 0x42::M::R>' can have the ability 'drop' but the type argument '0x42::M::R' does not have the required ability 'drop'
    │

